--- a/src/Components/Board/YourBoard/BoardChips.scss
+++ b/src/Components/Board/YourBoard/BoardChips.scss
@@ -1,4 +1,4 @@
-.Board {
+.BoardChips {
   .BoardBox {
   }
   .BoardBox {
@@ -11,7 +11,6 @@
     column-gap: 10px;
   }
   .BoardColor {
-    background-color: rgb(27, 231, 231) !important;
     width: 70px !important;
     height: 70px;
   }
