--- a/src/Components/Board/DashBoard/DashBoard.scss
+++ b/src/Components/Board/DashBoard/DashBoard.scss
@@ -1,6 +1,10 @@
 .Board {
   .BoardBox {
   }
+  .ChipsBoard {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .BoardBox {
     height: 70px;
     width: 350px;
@@ -9,6 +13,8 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     column-gap: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
   }
   .BoardColor {
     width: 70px !important;
