--- a/src/Components/Common/Modals/CreateBoard/CreateBoard.scss
+++ b/src/Components/Common/Modals/CreateBoard/CreateBoard.scss
@@ -19,6 +19,10 @@
     border-radius: 16px;
     margin-right: 5px;
   }
+  .SelectColor {
+    border-radius: 8px;
+    margin-right: 5px;
+  }
   .CreateBoard {
     background-color: brown !important;
     border-color: brown !important;
