--- a/src/Components/Post/PublishedPost/PublishedPost.scss
+++ b/src/Components/Post/PublishedPost/PublishedPost.scss
@@ -3,7 +3,7 @@
   background-color: white;
   max-width: 15vw;
   min-width: 150px;
-  min-height: 10vh;
+  min-height: 200px;
   border-radius: 8px;
   padding: 10px;
   .Post {
@@ -15,5 +15,10 @@
     font-size: 20px;
     color: black;
     font-weight: 700;
+    word-break: break-all;
+  }
+  .Textarea {
+    max-width: 20vw;
+    word-break: break-all;
   }
 }
