--- a/src/Components/Post/PublishedPost/PublishedPost.scss
+++ b/src/Components/Post/PublishedPost/PublishedPost.scss
@@ -1,11 +1,11 @@
 .PublishPost {
   margin: 10px;
   background-color: white;
-  max-width: 15vw;
-  min-width: 150px;
-  min-height: 200px;
+  width: 300px;
+  min-height: 400px;
   border-radius: 8px;
   padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   .Post {
     display: flex;
     justify-content: space-between;
